# Video-Content-Filter

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_audio_experiments.ipynb  02_on_screen_text.ipynb
src/backend/: config.py  main.py
src/backend/api/: routes.py  schemas.py
src/backend/services/: job_store.py  processor.py
src/cli/: cli.py  main.py
src/content_filter/audio/: __init__.py  censor.py
src/content_filter/cli/: main.py
src/content_filter/utils/: __init__.py  dir.py  text.py
src/content_filter/video/: __init__.py  combine.py  subtitle_filtering.py
src/frontend/: package-lock.json
src/frontend/src/: App.tsx  index.css
tests/: subtitle_filterer_tests.py
